Fixed summary height to prevent text overflow...

--- a/web/src/app/articles/articles.component.scss
+++ b/web/src/app/articles/articles.component.scss
@@ -177,3 +177,9 @@
 .username {
     font-size: 0.7em;
 }
+
+.summary {
+    max-height: 100px;
+    text-overflow: ellipsis;
+    overflow-y: hidden;
+}
